[package]
name = "tumbler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-server = { version = "0.7.2", features = ["rustls", "tls-rustls", "tokio-rustls"] }
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
rustl = "0.0.1"
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.41"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.26.2"
tower-http = { version = "0.6.2", features = ["cors"] }
